--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -37,10 +37,9 @@ jobs:
           find prefix -name config.h
           cd ../../..
 
-          ld -r -b binary -o fmtutil.o fmtutil.pl
-          ld -r -b binary -o updmap.o  updmap.pl
+          ld -r -b binary -o myscript.o myscript.pl
 
-          gcc -o perlpack perlpack.c fmtutil.o updmap.o -I$PWD/build/native/perl -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -Ibuild/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/CORE      -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib                         build/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/auto/Fcntl/Fcntl.a build/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/auto/IO/IO.a build/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/auto/Cwd/Cwd.a build/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/CORE/libperl.a -lpthread -ldl -lm -lutil -lc -lm 
+          gcc -o perlpack perlpack.c myscript.o  -I$PWD/build/native/perl -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -Ibuild/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/CORE      -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib                         build/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/auto/Fcntl/Fcntl.a build/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/auto/IO/IO.a build/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/auto/Cwd/Cwd.a build/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/CORE/libperl.a -lpthread -ldl -lm -lutil -lc -lm 
           ldd ./perlpack || true
           ./perlpack updmap.pl --help || true
       
@@ -62,7 +61,7 @@ jobs:
 
           #strace -ff -e trace=file,read,write,close perl -e 'use Cwd;' 
           #cc -shared -fPIC log_file_access_dynamic.c -o log_file_access_dynamic.so -ldl
-          #LD_PRELOAD=$PWD/log_file_access_dynamic.so perl -e 'use Cwd;'  #./perlpack fmtutil.pl --help 
+          #LD_PRELOAD=$PWD/log_file_access_dynamic.so perl -e 'use Cwd;'  #./perlpack myscript.pl --help 
           
           #LD_PRELOAD=$PWD/busyfs/packfs.so strace -ff -e trace=file,read,write,close perl -e 'open (FILE, "dist-native/lib/perl5/5.35.4/x86_64-linux/Cwd.pm"); print <FILE>;'
           #LD_PRELOAD=$PWD/busyfs/packfs.so perl -e 'open (FILE, "dist-native/lib/perl5/5.35.4/x86_64-linux/Cwd.pm"); print <FILE>;'
