--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -39,7 +39,7 @@ jobs:
 
           ld -r -b binary -o myscript.o myscript.pl
 
-          nm $(find build/native/perl/prefix/lib/ -name '*.a') | grep boot
+          for p in $(find build/native/perl/prefix/lib/ -name '*.a'); do echo $p; nm $p | grep boot; done
 
           gcc -o perlpack perlpack.c myscript.o  -I$PWD/build/native/perl -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -Ibuild/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/CORE      -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib                         build/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/auto/Fcntl/Fcntl.a build/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/auto/IO/IO.a build/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/auto/Cwd/Cwd.a build/native/perl/prefix/lib/perl5/5.35.4/x86_64-linux/CORE/libperl.a -lpthread -ldl -lm -lutil -lc -lm 
           ldd ./perlpack || true
