--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -24,63 +24,62 @@ jobs:
           tar -xf $(basename $URLPERL) --strip-components=1 --directory=build
           
           cd build
-          sh ./Configure -sde -Dman1dir=none -Dman3dir=none -Dprefix=prefix -Aldflags=-lm -Accflags=-lm -Dstatic_ext="IO Fcntl  Cwd Opcode re mro B Socket POSIX attributes Storable Data/Dumper MIME/Base64 Digest/MD5 Digest/SHA Encode Encode/CN Encode/Unicode Encode/TW Encode/JP Encode/KR  Encode/Byte Encode/EBCDIC Encode/Symbol threads threads/shared Sys/Syslog Sys/Hostname Time/HiRes Time/Piece Unicode/Normalize Unicode/Collate Compress/Raw/Zlib Compress/Raw/Bzip2 PerlIO/scalar PerlIO/encoding PerlIO/via PerlIO/mmap Devel/Peek IPC/SysV File/Glob File/DosGlob Hash/Util Hash/Util/FieldHash Filter/Util/Call  I18N/Langinfo List/Util Math/BigInt/FastCalc SDBM_File" -Dusedevel -Dlibs="-lpthread -ldl -lm -lutil -lc"
+          sh ./Configure -sde -Dman1dir=none -Dman3dir=none -Dprefix=../prefix -Aldflags=-lm -Accflags=-lm -Dstatic_ext="IO Fcntl  Cwd Opcode re mro B Socket POSIX attributes Storable Data/Dumper MIME/Base64 Digest/MD5 Digest/SHA Encode Encode/CN Encode/Unicode Encode/TW Encode/JP Encode/KR  Encode/Byte Encode/EBCDIC Encode/Symbol threads threads/shared Sys/Syslog Sys/Hostname Time/HiRes Time/Piece Unicode/Normalize Unicode/Collate Compress/Raw/Zlib Compress/Raw/Bzip2 PerlIO/scalar PerlIO/encoding PerlIO/via PerlIO/mmap Devel/Peek IPC/SysV File/Glob File/DosGlob Hash/Util Hash/Util/FieldHash Filter/Util/Call  I18N/Langinfo List/Util Math/BigInt/FastCalc SDBM_File" -Dusedevel -Dlibs="-lpthread -ldl -lm -lutil -lc"
           make miniperl generate_uudmap
           make perl
           make install
           cd ..
            
-          ld -r -b binary -o myscript.o myscript.pl
 
           #gcc -o perlpack perlpack.c myscript.o  -I$PWD/build -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -Ibuild/prefix/lib/perl5/*/x86_64-linux/CORE      -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib                         build/prefix/lib/perl5/*/x86_64-linux/auto/Fcntl/Fcntl.a build/prefix/lib/perl5/*/x86_64-linux/auto/IO/IO.a build/prefix/lib/perl5/*/x86_64-linux/auto/Cwd/Cwd.a build/prefix/lib/perl5/*/x86_64-linux/auto/Encode/Unicode/Unicode.a build/prefix/lib/perl5/*/x86_64-linux/CORE/libperl.a -lpthread -ldl -lm -lutil -lc -lm 
-          echo CORE
-          find build/prefix/lib/perl5/*/x86_64-linux/CORE -name '*.h'
-          echo GENERIC
-          find build -name '*.h'
-          echo END
+          #echo CORE
+          #find build/prefix/lib/perl5/*/x86_64-linux/CORE -name '*.h'
+          #echo GENERIC
+          #find build -name '*.h'
+          #echo END
           
           # -Ibuild/prefix/lib/perl5/*/x86_64-linux/CORE
           #mv build/prefix .
+          
+          ld -r -b binary -o myscript.o myscript.pl
           cc -o perlpack perlpack.c myscript.o  -I$PWD/build -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64     -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib                         build/lib/auto/Fcntl/Fcntl.a build/lib/auto/IO/IO.a build/lib/auto/Cwd/Cwd.a build/lib/auto/Encode/Unicode/Unicode.a build/libperl.a -lpthread -ldl -lm -lutil -lc -lm 
           ldd ./perlpack || true
           ./perlpack
       
       - name: Test Native Perl
         run: |
-          rm -rf build/prefix/man build/prefix/lib/*/pod/ || true
-          find build/prefix/lib -name '*.pod' -delete
-          find build/prefix -type f
+          rm -rf prefix/man prefix/lib/*/pod/ || true
+          find prefix/lib -name '*.pod' -delete
           find build -name '*.a'
-          find build/prefix -name '*.so'
-          find build/prefix -name config.h
+          find prefix -name '*.so'
+          find prefix -name config.h
 
-          find build
           git clone https://github.com/busytex/busyfs
-          mv build/prefix busyfs/dist-native
-          find busyfs/dist-native -name '*.a'
-          find busyfs/dist-native -name '*.so'
+          mv prefix busyfs/packfs
+          find busyfs/packfs -name '*.a'
+          find busyfs/packfs -name '*.so'
           cd busyfs
-          find dist-native -name '*.ld' -delete
-          find dist-native -name '*.a' -delete
-          find dist-native -name '*.h' -delete
-          python packfs.py -i dist-native -o packfs.h
+          find packfs -name '*.ld' -delete
+          find packfs -name '*.a' -delete
+          find packfs -name '*.h' -delete
+          python packfs.py -i packfs -o packfs.h
           cc -shared -fPIC packfs.c -o packfs.so -ldl @packfs.h.txt
-          find dist-native -name '*.o' -delete
+          find packfs -name '*.o' -delete
           cd ..
 
           #strace -ff -e trace=file,read,write,close perl -e 'use Cwd;' 
           #cc -shared -fPIC log_file_access_dynamic.c -o log_file_access_dynamic.so -ldl
           #LD_PRELOAD=$PWD/log_file_access_dynamic.so perl -e 'use Cwd;'  #./perlpack myscript.pl --help 
           
-          #LD_PRELOAD=$PWD/busyfs/packfs.so strace -ff -e trace=file,read,write,close perl -e 'open (FILE, "dist-native/lib/perl5/5.35.4/x86_64-linux/Cwd.pm"); print <FILE>;'
-          #LD_PRELOAD=$PWD/busyfs/packfs.so perl -e 'open (FILE, "dist-native/lib/perl5/5.35.4/x86_64-linux/Cwd.pm"); print <FILE>;'
+          #LD_PRELOAD=$PWD/busyfs/packfs.so strace -ff -e trace=file,read,write,close perl -e 'open (FILE, "packfs/lib/perl5/5.35.4/x86_64-linux/Cwd.pm"); print <FILE>;'
+          #LD_PRELOAD=$PWD/busyfs/packfs.so perl -e 'open (FILE, "packfs/lib/perl5/5.35.4/x86_64-linux/Cwd.pm"); print <FILE>;'
           
-          #LD_PRELOAD=$PWD/busyfs/packfs.so PERLLIB=dist-native/lib/perl5/5.35.4:dist-native/lib/perl5/5.35.4/x86_64-linux strace -ff -e trace=file,read,write,close  -perl -e 'use Cwd;'
+          #LD_PRELOAD=$PWD/busyfs/packfs.so PERLLIB=packfs/lib/perl5/5.35.4:packfs/lib/perl5/5.35.4/x86_64-linux strace -ff -e trace=file,read,write,close  -perl -e 'use Cwd;'
           export PERL_DL_DEBUG=1
           #echo RUN1
-          #PERLLIB=busyfs/dist-native/lib/perl5/5.35.4:busyfs/dist-native/lib/perl5/5.35.4/x86_64-linux strace -ff -e trace=file,read,write,close ./perlpack -e 'use Cwd;print(Cwd::cwd()."\n");'
+          #PERLLIB=busyfs/packfs/lib/perl5/5.35.4:busyfs/packfs/lib/perl5/5.35.4/x86_64-linux strace -ff -e trace=file,read,write,close ./perlpack -e 'use Cwd;print(Cwd::cwd()."\n");'
           echo RUN2
-          LD_PRELOAD=$PWD/busyfs/packfs.so PERLLIB=dist-native/lib/perl5/5.35.4:dist-native/lib/perl5/5.35.4/x86_64-linux ./perlpack -e 'use Cwd;print(Cwd::cwd()."\n");'
+          LD_PRELOAD=$PWD/busyfs/packfs.so PERLLIB=packfs/lib/perl5/5.35.4:packfs/lib/perl5/5.35.4/x86_64-linux ./perlpack -e 'use Cwd;print(Cwd::cwd()."\n");'
        
       - name: Artifacts
         uses: actions/upload-artifact@v4
