--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build Native Perl
         run: |
           export MAKEFLAGS
-          mkdir -p build
+          mkdir build
           wget -nc $URLPERL
           tar -xf $(basename $URLPERL) --strip-components=1 --directory=build
           
@@ -30,7 +30,6 @@ jobs:
           make install
           cd ..
            
-
           #gcc -o perlpack perlpack.c myscript.o  -I$PWD/build -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -Ibuild/prefix/lib/perl5/*/x86_64-linux/CORE      -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib                         build/prefix/lib/perl5/*/x86_64-linux/auto/Fcntl/Fcntl.a build/prefix/lib/perl5/*/x86_64-linux/auto/IO/IO.a build/prefix/lib/perl5/*/x86_64-linux/auto/Cwd/Cwd.a build/prefix/lib/perl5/*/x86_64-linux/auto/Encode/Unicode/Unicode.a build/prefix/lib/perl5/*/x86_64-linux/CORE/libperl.a -lpthread -ldl -lm -lutil -lc -lm 
           #echo CORE
           #find build/prefix/lib/perl5/*/x86_64-linux/CORE -name '*.h'
@@ -39,7 +38,6 @@ jobs:
           #echo END
           
           # -Ibuild/prefix/lib/perl5/*/x86_64-linux/CORE
-          #mv build/prefix .
           
           ld -r -b binary -o myscript.o myscript.pl
           cc -o perlpack perlpack.c myscript.o  -I$PWD/build -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64     -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib                         build/lib/auto/Fcntl/Fcntl.a build/lib/auto/IO/IO.a build/lib/auto/Cwd/Cwd.a build/lib/auto/Encode/Unicode/Unicode.a build/libperl.a -lpthread -ldl -lm -lutil -lc -lm 
