--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -30,19 +30,10 @@ jobs:
           make install
           cd ..
            
-          #gcc -o perlpack perlpack.c myscript.o  -I$PWD/build -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -Ibuild/prefix/lib/perl5/*/x86_64-linux/CORE      -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib                         build/prefix/lib/perl5/*/x86_64-linux/auto/Fcntl/Fcntl.a build/prefix/lib/perl5/*/x86_64-linux/auto/IO/IO.a build/prefix/lib/perl5/*/x86_64-linux/auto/Cwd/Cwd.a build/prefix/lib/perl5/*/x86_64-linux/auto/Encode/Unicode/Unicode.a build/prefix/lib/perl5/*/x86_64-linux/CORE/libperl.a -lpthread -ldl -lm -lutil -lc -lm 
-          #echo CORE
-          #find build/prefix/lib/perl5/*/x86_64-linux/CORE -name '*.h'
-          #echo GENERIC
-          #find build -name '*.h'
-          #echo END
-          
-          # -Ibuild/prefix/lib/perl5/*/x86_64-linux/CORE
-          
           ld -r -b binary -o myscript.o myscript.pl
           cc -o perlpack perlpack.c myscript.o    -I$PWD/build -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64     -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib   $(printf "build/lib/auto/%s " mro/mro.a Devel/Peek/Peek.a File/DosGlob/DosGlob.a File/Glob/Glob.a Sys/Syslog/Syslog.a Sys/Hostname/Hostname.a PerlIO/via/via.a PerlIO/mmap/mmap.a PerlIO/encoding/encoding.a PerlIO/scalar/scalar.a B/B.a attributes/attributes.a Unicode/Normalize/Normalize.a Unicode/Collate/Collate.a threads/threads.a threads/shared/shared.a IPC/SysV/SysV.a re/re.a Digest/MD5/MD5.a Digest/SHA/SHA.a SDBM_File/SDBM_File.a Math/BigInt/FastCalc/FastCalc.a Data/Dumper/Dumper.a I18N/Langinfo/Langinfo.a Time/HiRes/HiRes.a Time/Piece/Piece.a IO/IO.a Socket/Socket.a Hash/Util/FieldHash/FieldHash.a Hash/Util/Util.a Filter/Util/Call/Call.a POSIX/POSIX.a Encode/Unicode/Unicode.a Encode/Encode.a Encode/JP/JP.a Encode/KR/KR.a Encode/EBCDIC/EBCDIC.a Encode/CN/CN.a Encode/Symbol/Symbol.a Encode/Byte/Byte.a Encode/TW/TW.a Compress/Raw/Zlib/Zlib.a Compress/Raw/Bzip2/Bzip2.a MIME/Base64/Base64.a Cwd/Cwd.a Storable/Storable.a List/Util/Util.a Fcntl/Fcntl.a Opcode/Opcode.a) build/libperl.a -lpthread -ldl -lm -lutil -lc -lm  --static -static -static-libstdc++ -static-libgcc
-          ldd ./perlpack || true
           ./perlpack
+          ldd ./perlpack || true
       
       - name: Test Native Perl
         run: |
@@ -60,7 +51,6 @@ jobs:
           find packfs -name '*.o' -delete
           cd ..
 
-          export PERL_DL_DEBUG=1
           #strace -ff -e trace=file,read,write,close
           LD_PRELOAD=$PWD/busyfs/packfs.so PERLLIB=packfs/lib/perl5/5.35.4:packfs/lib/perl5/5.35.4/x86_64-linux ./perlpack -e 'use Cwd;print(Cwd::cwd()."\n");'
        
@@ -69,4 +59,4 @@ jobs:
         with:
           path: |
             perlpack
-            ./busyfs/packfs.h.txt
+            ./busyfs/packfs.h
