--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -45,12 +45,12 @@ jobs:
           ###
           ld -r -b binary -o myscript.o myscript.pl
           cc -o perlpack perlpack.c myscript.o    -I$PWD/build -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64     -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib build/libperl.a   -lpthread -ldl -lm -lutil -lc   $STATICLDFLAGS $MODULES_def $(printf "build/lib/auto/%s " $MODULES_a)   @packfs.h.txt
-          ./perlpack
-          ldd ./perlpack || true
-          ###
-          #LD_PRELOAD=$PWD/packfs.so PERLLIB=packfs/lib/perl5/5.35.4:packfs/lib/perl5/5.35.4/x86_64-linux ./perlpack -e 'use Cwd;print(Cwd::cwd()."\n");'
-          export PERLLIB=packfs/lib/perl5/5.35.4:packfs/lib/perl5/5.35.4/x86_64-linux 
-          gdb -batch -ex run -ex bt --args ./perlpack -e 'use Cwd;print(Cwd::cwd()."\n");'
+          #./perlpack
+          ##ldd ./perlpack || true
+          ##LD_PRELOAD=$PWD/packfs.so PERLLIB=packfs/lib/perl5/5.35.4:packfs/lib/perl5/5.35.4/x86_64-linux ./perlpack -e 'use Cwd;print(Cwd::cwd()."\n");'
+          #
+          #export PERLLIB=packfs/lib/perl5/5.35.4:packfs/lib/perl5/5.35.4/x86_64-linux 
+          #gdb -batch -ex run -ex bt --args ./perlpack -e 'use Cwd;print(Cwd::cwd()."\n");'
        
       - name: Artifacts
         uses: actions/upload-artifact@v4
