--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -49,12 +49,13 @@ jobs:
           ##ldd ./perlpack || true
           ##LD_PRELOAD=$PWD/packfs.so PERLLIB=packfs/lib/perl5/5.35.4:packfs/lib/perl5/5.35.4/x86_64-linux ./perlpack -e 'use Cwd;print(Cwd::cwd()."\n");'
           #
-          #export PERLLIB=packfs/lib/perl5/5.35.4:packfs/lib/perl5/5.35.4/x86_64-linux 
-          #gdb -batch -ex run -ex bt --args ./perlpack -e 'use Cwd;print(Cwd::cwd()."\n");'
+          rm -rf packfs
+          export PERLLIB=packfs/lib/perl5/5.35.4:packfs/lib/perl5/5.35.4/x86_64-linux 
+          ./perlpack -e 'use Cwd;print(Cwd::cwd()."\n");'
        
-#      - name: Artifacts
-#        uses: actions/upload-artifact@v4
-#        with:
-#          path: |
-#            perlpack
-#            packfs.h.txt
+      - name: Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          path: |
+            perlpack
+            packfs.h.txt
