--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -49,7 +49,7 @@ jobs:
           ##ldd ./perlpack || true
           rm -rf packfs
           export PERLLIB=packfs/lib/perl5/5.35.4:packfs/lib/perl5/5.35.4/x86_64-linux 
-          ./perlpack -e 'use Cwd;print(Cwd::cwd()."\n");'
+          strace -f -e trace=file,read,write,close ./perlpack -e 'use Cwd;print(Cwd::cwd()."\n");'
        
       - name: Artifacts
         uses: actions/upload-artifact@v4
