--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -40,11 +40,11 @@ jobs:
         run: |
           rm -rf packfs/man packfs/lib/*/pod/
           find packfs -name '*.pod' -o -name '*.ld' -o -name '*.a' -o -name '*.h' -delete
-          python packfs.py -i packfs -o packfs.h
-          #cc -shared -fPIC packfs.c -o packfs.so -ldl @packfs.h.txt
+          python packfs.py -i packfs -o perlpack.h
+          #cc -shared -fPIC packfs.c -o packfs.so -ldl @perlpack.h.txt
           ###
           ld -r -b binary -o myscript.o myscript.pl
-          cc -o perlpack perlpack.c myscript.o  -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -DPACKFS_DYNAMIC    -I$PWD/build -I/usr/local/include   -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib build/libperl.a   -lpthread -ldl -lm -lutil -lc   $STATICLDFLAGS $MODULES_def $(printf "build/lib/auto/%s " $MODULES_a)   @packfs.h.txt
+          cc -o perlpack perlpack.c myscript.o  -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -DPACKFS_DYNAMIC    -I$PWD/build -I/usr/local/include   -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib build/libperl.a   -lpthread -ldl -lm -lutil -lc   $STATICLDFLAGS $MODULES_def $(printf "build/lib/auto/%s " $MODULES_a)   @perlpack.h.txt
           ./perlpack
           ##ldd ./perlpack || true
           rm -rf packfs
@@ -56,4 +56,4 @@ jobs:
         with:
           path: |
             perlpack
-            packfs.h.txt
+            perlpack.h.txt
