--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -49,6 +49,7 @@ jobs:
           ##ldd ./perlpack || true
           rm -rf packfs
           #export PERLLIB=/mnt/perlpack/lib/perl5/5.35.4:/mnt/perlpack/lib/perl5/5.35.4/x86_64-linux 
+          ./perlpack
           strace -f -e trace=file,read,write,close ./perlpack -e 'use Cwd;print(Cwd::cwd(),"\n");'
        
       - name: Artifacts
