--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -31,7 +31,7 @@ jobs:
           tar -xf $(basename $URLPERL) --strip-components=1 --directory=build
           
           cd build
-          sh ./Configure -sde -Dman1dir=none -Dman3dir=none -Dprefix=../packfs -Dsiteprefix=/mnt/perlpack -Aldflags=-lm -Accflags=-lm -Dusedevel -Dlibs="-lpthread -ldl -lm -lutil -lc" -Dstatic_ext="$MODULES_ext"
+          sh ./Configure -sde -Dman1dir=none -Dman3dir=none -Dprefix=/mnt/perlpack -Dinstallprefix=../packfs -Aldflags=-lm -Accflags=-lm -Dusedevel -Dlibs="-lpthread -ldl -lm -lutil -lc" -Dstatic_ext="$MODULES_ext"
           make miniperl generate_uudmap
           make perl
           make install
@@ -50,7 +50,7 @@ jobs:
           rm -rf packfs
           #export PERLLIB=/mnt/perlpack/lib/perl5/5.35.4:/mnt/perlpack/lib/perl5/5.35.4/x86_64-linux 
           ./perlpack
-          strace -f -e trace=file,read,write,close ./perlpack -e 'use Cwd;print(Cwd::cwd(),"\n");'
+          strace -f -e trace=file,read,write,close ./perlpack -e 'use Cwd; print(Cwd::cwd(), "\n");'
        
       - name: Artifacts
         uses: actions/upload-artifact@v4
