--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -4,7 +4,6 @@ on: workflow_dispatch
 
 env:
   URLPERL: https://www.cpan.org/src/5.0/perl-5.35.4.tar.gz
-  VERPERL: 5.35.4
   ###
   MAKEFLAGS: -j2
   #STATICLDFLAGS: --static -static -static-libstdc++ -static-libgcc
@@ -44,12 +43,10 @@ jobs:
           python perlpack.py -i packfs -o perlpack.h --prefix=/mnt/perlpack/
           ###
           ld -r -b binary -o myscript.o myscript.pl
-          cc -o perlpack perlpack.c myscript.o  -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -DPACKFS_DYNAMIC -DPACKFS_LOG   -I$PWD/build -I/usr/local/include   -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib build/libperl.a   -lpthread -ldl -lm -lutil -lc   $STATICLDFLAGS $MODULES_def $(printf "build/lib/auto/%s " $MODULES_a)   @perlpack.h.txt
+          cc -o perlpack perlpack.c myscript.o  -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -DPACKFS_DYNAMIC  -I$PWD/build -I/usr/local/include   -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib build/libperl.a   -lpthread -ldl -lm -lutil -lc   $STATICLDFLAGS $MODULES_def $(printf "build/lib/auto/%s " $MODULES_a)   @perlpack.h.txt
           ./perlpack
           ##ldd ./perlpack || true
           rm -rf packfs
-          #export PERLLIB=/mnt/perlpack/lib/perl5/5.35.4:/mnt/perlpack/lib/perl5/5.35.4/x86_64-linux 
-          ./perlpack
           strace -f -e trace=file,read,write,close ./perlpack -e 'use Cwd; print(Cwd::cwd(), "\n");'
        
       - name: Artifacts
