--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -46,8 +46,9 @@ jobs:
           cc -o perlpack perlpack.c myscript.o  -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -DPACKFS_DYNAMIC  -I$PWD/build -I/usr/local/include   -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib build/libperl.a   -lpthread -ldl -lm -lutil -lc   $STATICLDFLAGS $MODULES_def $(printf "build/lib/auto/%s " $MODULES_a)   @perlpack.h.txt
           ./perlpack
           ##ldd ./perlpack || true
+          #strace -f -e trace=file,read,write,close
           rm -rf packfs
-          strace -f -e trace=file,read,write,close ./perlpack -e 'use Cwd; print(Cwd::cwd(), "\n");'
+          ./perlpack -e 'use Cwd; print(Cwd::cwd(), "\n");'
        
       - name: Artifacts
         uses: actions/upload-artifact@v4
