--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -21,6 +21,16 @@ jobs:
         run:  apk add --update --no-cache libnsl libnsl-dev build-base coreutils gdb cmake git xz wget perl gperf p7zip python3 strace && ln -sf python3 /usr/bin/python
 
       - uses: actions/checkout@v4
+      
+      - name: Patch libc_origio.a
+        run: |
+	  cp $(cc -print-file-name=libc.a) libc_origio.a
+          echo BEFOREPATCHINGBEGIN; nm libc_origio.a; echo BEFOREPATCHINGEND
+	  ar x libc_origio.a fopen.lo open.lo
+	  objcopy --redefine-sym fopen=orig_fopen fopen.lo
+	  objcopy --redefine-sym open=orig_open    open.lo
+	  ar rs libc_origio.a fopen.lo open.lo
+          echo AFTERPATCHINGBEGIN; nm libc_origio.a; echo AFTERPATCHINGEND
 
       - name: Build Native Perl
         run: |
