--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -22,7 +22,7 @@ jobs:
 
       - uses: actions/checkout@v4
       
-      - name: Patch libc_origio.a
+      - name: Build Native Perl
         run: |
 	  cp $(cc -print-file-name=libc.a) libc_origio.a
           echo BEFOREPATCHINGBEGIN; nm libc_origio.a; echo BEFOREPATCHINGEND
