--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -24,6 +24,14 @@ jobs:
 
       - name: Build Native Perl
         run: |
+          cp $(cc -print-file-name=libc.a) libc_origio.a
+          echo BEFOREPATCHINGBEGIN; nm libc_origio.a; echo BEFOREPATCHINGEND
+          ar x libc_origio.a fopen.lo open.lo
+          objcopy --redefine-sym fopen=orig_fopen fopen.lo
+          objcopy --redefine-sym open=orig_open    open.lo
+          ar rs libc_origio.a fopen.lo open.lo
+          echo AFTERPATCHINGBEGIN; nm libc_origio.a; echo AFTERPATCHINGEND
+
           export MAKEFLAGS
           mkdir build
           wget -nc $URLPERL
