--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -6,7 +6,7 @@ env:
   URLPERL: https://www.cpan.org/src/5.0/perl-5.35.4.tar.gz
   ###
   MAKEFLAGS: -j2
-  #STATICLDFLAGS: --static -static -static-libstdc++ -static-libgcc
+  STATICLDFLAGS: --static -static -static-libstdc++ -static-libgcc
   ###
   MODULES_a: mro/mro.a Devel/Peek/Peek.a File/DosGlob/DosGlob.a File/Glob/Glob.a Sys/Syslog/Syslog.a Sys/Hostname/Hostname.a PerlIO/via/via.a PerlIO/mmap/mmap.a PerlIO/encoding/encoding.a PerlIO/scalar/scalar.a B/B.a attributes/attributes.a Unicode/Normalize/Normalize.a Unicode/Collate/Collate.a threads/threads.a threads/shared/shared.a IPC/SysV/SysV.a re/re.a Digest/MD5/MD5.a Digest/SHA/SHA.a SDBM_File/SDBM_File.a Math/BigInt/FastCalc/FastCalc.a Data/Dumper/Dumper.a I18N/Langinfo/Langinfo.a Time/HiRes/HiRes.a Time/Piece/Piece.a IO/IO.a Socket/Socket.a Hash/Util/FieldHash/FieldHash.a Hash/Util/Util.a Filter/Util/Call/Call.a POSIX/POSIX.a Encode/Unicode/Unicode.a Encode/Encode.a Encode/JP/JP.a Encode/KR/KR.a Encode/EBCDIC/EBCDIC.a Encode/CN/CN.a Encode/Symbol/Symbol.a Encode/Byte/Byte.a Encode/TW/TW.a Compress/Raw/Zlib/Zlib.a Compress/Raw/Bzip2/Bzip2.a MIME/Base64/Base64.a Cwd/Cwd.a Storable/Storable.a List/Util/Util.a Fcntl/Fcntl.a Opcode/Opcode.a
   MODULES_ext: IO Fcntl  Cwd Opcode re mro B Socket POSIX attributes Storable Data/Dumper MIME/Base64 Digest/MD5 Digest/SHA Encode Encode/CN Encode/Unicode Encode/TW Encode/JP Encode/KR  Encode/Byte Encode/EBCDIC Encode/Symbol threads threads/shared Sys/Syslog Sys/Hostname Time/HiRes Time/Piece Unicode/Normalize Unicode/Collate Compress/Raw/Zlib Compress/Raw/Bzip2 PerlIO/scalar PerlIO/encoding PerlIO/via PerlIO/mmap Devel/Peek IPC/SysV File/Glob File/DosGlob Hash/Util Hash/Util/FieldHash Filter/Util/Call  I18N/Langinfo List/Util Math/BigInt/FastCalc SDBM_File
@@ -25,11 +25,16 @@ jobs:
       - name: Build libc_perlpack.a
         run: |
           cp $(cc -print-file-name=libc.a) libc_perlpack.a
-          echo BEFOREPATCHINGBEGIN; nm libc_perlpack.a; echo BEFOREPATCHINGEND
-          ar x libc_perlpack.a fopen.lo open.lo
-          objcopy --redefine-sym fopen=orig_fopen fopen.lo
+          ar x libc_perlpack.a open.lo close.lo read.lo stat.lo lseek.lo access.lo fopen.lo fileno.lo
           objcopy --redefine-sym open=orig_open    open.lo
-          ar rs libc_perlpack.a fopen.lo open.lo
+          objcopy --redefine-sym open=orig_close   close.lo
+          objcopy --redefine-sym open=orig_read    read.lo
+          objcopy --redefine-sym open=orig_stat    stat.lo
+          objcopy --redefine-sym open=orig_lseek   lseek.lo
+          objcopy --redefine-sym open=orig_access  access.lo
+          objcopy --redefine-sym fopen=orig_fopen fopen.lo
+          objcopy --redefine-sym open=orig_fileno   fileno.lo
+          ar rs libc_perlpack.a  open.lo close.lo read.lo stat.lo lseek.lo access.lo fopen.lo fileno.lo
           echo AFTERPATCHINGBEGIN; nm libc_perlpack.a; echo AFTERPATCHINGEND
 
       - name: Build Native Perl
@@ -53,12 +58,15 @@ jobs:
           python perlpack.py -i packfs -o perlpack.h --prefix=/mnt/perlpack/
           ###
           ld -r -b binary -o myscript.o myscript.pl
-          cc -o perlpack perlpack.c myscript.o  -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -DPACKFS_DYNAMIC  -I$PWD/build -I/usr/local/include   -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib build/libperl.a   -lpthread -ldl -lm -lutil -lc   $STATICLDFLAGS $MODULES_def $(printf "build/lib/auto/%s " $MODULES_a)   @perlpack.h.txt
+          cc -o perlpack perlpack.c myscript.o  -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -DPACKFS_DYNAMIC  -I$PWD/build -I/usr/local/include   -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib build/libperl.a   -lpthread -ldl -lm -lutil -lc   $MODULES_def $(printf "build/lib/auto/%s " $MODULES_a)   @perlpack.h.txt
           ./perlpack
           ##ldd ./perlpack || true
           #strace -f -e trace=file,read,write,close
           rm -rf packfs
           ./perlpack -e 'use Cwd; print(Cwd::cwd(), "\n");'
+          # https://stackoverflow.com/questions/10763394/how-to-build-a-c-program-using-a-custom-version-of-glibc-and-static-linking
+          cp libc_perlpack.a libc.a
+          cc -o perlpack perlpack.c myscript.o  -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -DPACKFS_STATIC  -I$PWD/build -I/usr/local/include   -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib build/libperl.a libc.a  -lpthread -ldl -lm -lutil -lc   $STATICLDFLAGS $MODULES_def $(printf "build/lib/auto/%s " $MODULES_a)   @perlpack.h.txt
        
       - name: Artifacts
         uses: actions/upload-artifact@v4
