--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -51,16 +51,17 @@ jobs:
       
       - name: Test Native Perl
         run: |
+          ld -r -b binary -o myscript.o myscript.pl
+          
           rm -rf packfs/man packfs/lib/*/pod/
           find packfs -name '*.pod' -o -name '*.ld' -o -name '*.a' -o -name '*.h' -delete
-          #python perlpack.py -i packfs -o perlpack.h --prefix=/mnt/perlpack/
-          perl perlpack.pl -i packfs -o perlpack.h --prefix=/mnt/perlpack/
+          python perlpack.py -i packfs -o perlpack.h --prefix=/mnt/perlpack/
+          #perl perlpack.pl -i packfs -o perlpack.h --prefix=/mnt/perlpack/
           rm -rf packfs
-          ###
-          ld -r -b binary -o myscript.o myscript.pl
-          cc -o perlpack perlpack.c myscript.o  -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -I$PWD/build -I/usr/local/include   -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib build/libperl.a   -lpthread -ldl -lm -lutil -lc   $MODULES_def $(printf "build/lib/auto/%s " $MODULES_a)   @perlpack.h.txt
-          ./perlpack
-          ./perlpack       -e 'use Cwd; print(Cwd::cwd(), "\n");'
+          
+          #cc -o perlpack perlpack.c myscript.o  -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -I$PWD/build -I/usr/local/include   -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib build/libperl.a   -lpthread -ldl -lm -lutil -lc   $MODULES_def $(printf "build/lib/auto/%s " $MODULES_a)   @perlpack.h.txt
+          #./perlpack
+          #./perlpack       -e 'use Cwd; print(Cwd::cwd(), "\n");'
           
           # https://stackoverflow.com/questions/10763394/how-to-build-a-c-program-using-a-custom-version-of-glibc-and-static-linking
           cc -o perlpackstatic perlpack.c myscript.o  -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -DPACKFS_STATIC -I$PWD/build -I/usr/local/include   -Wl,-E -fstack-protector-strong -fwrapv -fno-strict-aliasing -L/usr/local/lib build/libperl.a libc_perlpack.a  -lpthread -ldl -lm -lutil --static -static -static-libstdc++ -static-libgcc  $MODULES_def $(printf "build/lib/auto/%s " $MODULES_a)   @perlpack.h.txt
