--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -20,6 +20,9 @@ jobs:
         run:  apk add --update --no-cache libnsl libnsl-dev build-base coreutils gdb cmake git xz wget perl gperf p7zip python3 strace && ln -sf python3 /usr/bin/python
 
       - uses: actions/checkout@v4
+      
+      - name: Build libarchive
+        run: make libarchive/.libs/libarchive.a
 
       - name: Build libc_perlpack.a
         run: |
@@ -35,19 +38,17 @@ jobs:
           objcopy --redefine-sym fileno=orig_fileno fileno.lo
           ar rs libc_perlpack.a open.lo close.lo read.lo stat.lo lseek.lo access.lo fopen.lo fileno.lo
 
-      - name: Build Native Perl
+      - name: Build Perl
         run: |
+          mkdir -p build
           export MAKEFLAGS
-          mkdir build
           wget -nc $URLPERL
           tar -xf $(basename $URLPERL) --strip-components=1 --directory=build
           
-          cd build
-          sh ./Configure -sde -Dman1dir=none -Dman3dir=none -Dprefix=/mnt/perlpack -Dinstallprefix=../packfs -Aldflags=-lm -Accflags=-lm -Dusedevel -Dlibs="-lpthread -ldl -lm -lutil -lc" -Dstatic_ext="$MODULES_ext"
-          make miniperl generate_uudmap
-          make perl
-          make install
-          cd ..
+          cd build && sh ./Configure -sde -Dman1dir=none -Dman3dir=none -Dprefix=/mnt/perlpack -Dinstallprefix=../packfs -Aldflags=-lm -Accflags=-lm -Dusedevel -Dlibs="-lpthread -ldl -lm -lutil -lc" -Dstatic_ext="$MODULES_ext" && cd ..
+          make -C build miniperl generate_uudmap
+          make -C build perl
+          make -C build install
       
       - name: Test Native Perl
         run: |
