--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -17,7 +17,7 @@ jobs:
     container: alpine:3.14
     steps:
       - name: Install Prerequisites
-        run:  apk add --update --no-cache libnsl libnsl-dev build-base coreutils gdb cmake git xz wget perl gperf p7zip python3 strace automake libtool pkgconfig && ln -sf python3 /usr/bin/python
+        run:  apk add --update --no-cache libnsl libnsl-dev build-base coreutils gdb cmake git xz wget perl gperf p7zip python3 strace autoconf automake libtool pkgconfig && ln -sf python3 /usr/bin/python
 
       - uses: actions/checkout@v4
       
