--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -23,18 +23,7 @@ jobs:
         run: git clone --depth 1 --single-branch https://github.com/libarchive/libarchive && make libarchive/.libs/libarchive.a
 
       - name: Build libc_perlpack.a
-        run: |
-          cp $(cc -print-file-name=libc.a) libc_perlpack.a
-          ar x libc_perlpack.a  open.lo close.lo read.lo stat.lo lseek.lo access.lo fopen.lo fileno.lo
-          objcopy --redefine-sym open=orig_open     open.lo
-          objcopy --redefine-sym close=orig_close   close.lo
-          objcopy --redefine-sym read=orig_read     read.lo
-          objcopy --redefine-sym stat=orig_stat     stat.lo
-          objcopy --redefine-sym lseek=orig_lseek   lseek.lo
-          objcopy --redefine-sym access=orig_access access.lo
-          objcopy --redefine-sym fopen=orig_fopen   fopen.lo
-          objcopy --redefine-sym fileno=orig_fileno fileno.lo
-          ar rs libc_perlpack.a open.lo close.lo read.lo stat.lo lseek.lo access.lo fopen.lo fileno.lo
+        run: make libc_perlpack.a
 
       - name: Build Perl
         run: make build/libperl.a
